fix scrollbar styles

--- a/apps/frontend/src/styles/index.scss
+++ b/apps/frontend/src/styles/index.scss
@@ -32,3 +32,25 @@ button {
   outline: none;
   cursor: pointer;
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #adadad #e5e5e5;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #e5e5e5;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #adadad;
+  border-radius: 10px;
+  border: 3px none #ffffff;
+}
